--- a/CRUD Client/crudadmin/src/main/AndroidManifest.xml
+++ b/CRUD Client/crudadmin/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CRUDClient">
         <activity
+            android:name=".DeleteActivity"
+            android:exported="false" />
+        <activity
             android:name=".UpdateActivity"
             android:exported="false" />
         <activity
